src/sass/screen/_history.scss
.history-screen {
	overflow-y: scroll;
	background-color: #F9F9F9;
}

// where to put this rules???
morph-list-view {
  margin-bottom: 0;
}
morph-list-view-title {
	background-color: #eff0f4;
	margin: 0;
	padding: 10px;
}

morph-list-view-item {
	--display-inner-item-bottom-line: none;
	--container-align-items: stretch;
	margin-bottom: 0px;
	width: 100%;
}

morph-tabbar {
	--ios-bar-color: transparent;
	box-shadow: 0px -0.5px 0px 1px rgba(0, 0, 0, 0.3);
}

